...
         unattended for a number of minutes.  It tells the user that
         the alarm has been silenced.
    -->
    <string name="alert">Ringtone</string>

    <!-- Button labels on the alarm dialog: Snooze -->
    <string name="alarm_alert_dismiss_text">Dismiss</string>

    <!--
         Toast that appears after Alarm is snoozed from the Alarm
         dialog. Says the alarm will snooze for xxx minutes.
    -->
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes.</string>
...
         3: days hours
         4:            minutes
         5: days       minutes
         6:      hours minutes
         7: days hours minutes
    -->
    <string name="alarm_alert_snooze_text">Snooze</string>

    <!--
         Alarm confirmation toast: Describes how long from now until
         alarm fires
    -->
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
...
